# python-project-template

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: Makefile  README.md  pipeline-ci.yml  pyproject.toml
{{cookiecutter.project_name}}/cookiecutter_examples/fast_api/: Dockerfile  main.py
{{cookiecutter.project_name}}/cookiecutter_examples/fast_api/charts/{{cookiecutter.project_name}}/: values.yaml
{{cookiecutter.project_name}}/cookiecutter_examples/fast_api/charts/{{cookiecutter.project_name}}/templates/: application.yaml  service-clusterip.yaml  service-ingress.yaml
{{cookiecutter.project_name}}/cookiecutter_examples/typer_job/: Dockerfile
{{cookiecutter.project_name}}/cookiecutter_examples/typer_job/charts/wny-calibration/: Chart.yaml  values.yaml
{{cookiecutter.project_name}}/cookiecutter_examples/typer_job/charts/wny-calibration/templates/: NOTES.txt  job.yaml
{{cookiecutter.project_name}}/docs/: Makefile  conf.py  index.rst  make.bat  project_description.rst
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py
